<resources>
    <string name="app_name">MemoDog: Movies</string>
    <string name="poster_of_movie">Постер к фильму</string>
    <string name="most_popular">Самые популярные</string>
    <string name="top_rated">Наиболее рейтинговые</string>
    <string name="add_to_favourite">В избраном</string>
    <string name="remove_from_favourite">Удаленно из избраного</string>
    <string name="item_main">Главная</string>
    <string name="item_favourite">Избранное</string>
    <string name="launch_trailer">Launch trailer</string>
    <string name="description_poster_of_movie">Poster of movie</string>
    <string name="description_big_poster">Big poster of movie</string>
    <string name="test_overview">Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock \'n\' roll band Queen in 1970. Hit songs become instant classics. When Mercury\'s increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.</string>
    <string name="release_date">Дата выхода:</string>
    <string name="test_rating">8.5</string>
    <string name="description_star_icon">Star icon with rating of movie</string>
    <string name="title">Название:</string>
    <string name="original_title">Оригинальное название:</string>
    <string name="rating">Рейтинг:</string>
    <string name="test_title">Смолфут</string>
    <string name="test_original_title">Smallfoot</string>
    <string name="test_release_date">2018-10-03</string>
    <string name="overview">Описание:</string>
    <string name="test_trailer_title">Trailer 1</string>
    <string name="trailers_label">Трейлеры</string>
    <string name="reviews">Отзывы</string>
    <string name="description_icon_launch_trailer">Icon launch trailer</string>
    <string name="description_icon_favourite">Add/remove to/from favourite</string>
    <string name="warning_no_internet_connection">There is no internet connection. Please try again later...</string>
    <string name="description_reload_page">Reload page</string>
    <string name="slow_internet_connection_warning">Slow internet connection. Please try again later...</string>
    <string name="title_activity_navigation_menu">NavigationMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="about">О нас</string>
    <string name="share">\"Приложение MemoDog: Movies, скачивай прямо сейчас: \"</string>
    <string name="about_us">О нас</string>
    <string name="telegram">Смотри фильмы в FullHD!</string>
    <string name="tiktok">Нарезки из фильмов</string>
    <string name="more_apps">Другие приложения</string>
    <string name="developer">Разработчик</string>
    <string name="share_title">Поделиться</string>
    <string name="version_app">Версия приложения</string>
    <string name="author">I_Alakey</string>
    <string name="num_version">1.0</string>
</resources>